armv8: add arch-pxa1928 support
add arch-pxa1928 support under arch/arm/cpu/armv8/pxa1928
arch/arm/include/asm/arch-pxa1928/

ported from m2011.09:
1. arch/arm/cpu/armv8/pxa1928/cpu.c:
1.1. removed CONFIG_PXA168_FB/I2C_MV related code
1.2. kept I2C_MV/SDHCI/USB clock enabling of APMU
2. arch/arm/cpu/armv8/pxa1928/smp_init.S: removed due to:
2.1. release slave cpu and set release addr is no need for mcpm or
psci and might be harmful.
2.2. LPM test is removed.
3. arch/arm/include/asm/arch-pxa1928/cpu.h
3.1. removed cpu_is_ca7/9
3.2. removed sdh_ functions
4. arch/arm/include/asm/arch-pxa1928/config.h
4.1. removed configures for i2c/usb/mmc/lcd

added:
1. arch/arm/include/asm/arch-pxa1928/cpu.h
1.1. extern smp_config/smp_hw_cpuid out so that no need to extern in c

Change-Id: I51bbe2d0891e1944698c4329f38d65c428fb9229
Signed-off-by: Zhou Zhu <zzhu3@marvell.com>

--- a/arch/arm/Kconfig
+++ b/arch/arm/Kconfig
@@ -198,6 +198,9 @@ config ARCH_NOMADIK
 config ORION5X
 	bool "Marvell Orion"
 
+config TARGET_PXA1928DKB
+	bool "Marvell PXA1928DKB"
+
 config TARGET_DKB
 	bool "Support dkb"
 
@@ -569,6 +572,7 @@ source "board/CarMediaLab/flea3/Kconfig"
 source "board/Marvell/aspenite/Kconfig"
 source "board/Marvell/dkb/Kconfig"
 source "board/Marvell/gplugd/Kconfig"
+source "board/Marvell/pxa1928_concord/Kconfig"
 source "board/afeb9260/Kconfig"
 source "board/altera/socfpga/Kconfig"
 source "board/armadeus/apf27/Kconfig"
