power: pmic: add 88pm800 driver
Change-Id: I2962a28183aeccfb32a5c6c1b3da4f669876737e
Signed-off-by: Hongyan Song <hysong@marvell.com>

--- a/drivers/power/pmic/Makefile
+++ b/drivers/power/pmic/Makefile
@@ -16,3 +16,5 @@ obj-$(CONFIG_POWER_TPS65090_EC) += pmic_tps65090_ec.o
 obj-$(CONFIG_POWER_TPS65217) += pmic_tps65217.o
 obj-$(CONFIG_POWER_TPS65218) += pmic_tps65218.o
 obj-$(CONFIG_POWER_TPS65910) += pmic_tps65910.o
+obj-$(CONFIG_POWER_88PM800) += pmic_88pm800.o pmic_mrvl_common.o
+obj-$(CONFIG_POWER_88PM860) += pmic_88pm860.o pmic_mrvl_common.o
