power: pxa1928: add the core/ddr/axi DFC feature
Change-Id: Ibd1108a3f25ae1ddd875793cfbc98be61bcd65c6
Signed-off-by: Gang Wu <gwu3@marvell.com>

--- a/drivers/power/Makefile
+++ b/drivers/power/Makefile
@@ -13,6 +13,7 @@ obj-$(CONFIG_TPS6586X_POWER)	+= tps6586x.o
 obj-$(CONFIG_TWL4030_POWER)	+= twl4030.o
 obj-$(CONFIG_TWL6030_POWER)	+= twl6030.o
 obj-$(CONFIG_PALMAS_POWER)	+= palmas.o
+obj-$(CONFIG_PXA1928_DFC)	+= pxa1928_freq.o
 
 obj-$(CONFIG_POWER) += power_core.o
 obj-$(CONFIG_DIALOG_POWER) += power_dialog.o
