power: pxa1928: added the cp d2 command
Change-Id: Ibae4725ce85148f5ca1745d832aac4027d3fa538
Signed-off-by: Gang Wu <gwu3@marvell.com>

--- a/drivers/power/Makefile
+++ b/drivers/power/Makefile
@@ -14,6 +14,7 @@ obj-$(CONFIG_TWL4030_POWER)	+= twl4030.o
 obj-$(CONFIG_TWL6030_POWER)	+= twl6030.o
 obj-$(CONFIG_PALMAS_POWER)	+= palmas.o
 obj-$(CONFIG_PXA1928_DFC)	+= pxa1928_freq.o
+obj-$(CONFIG_PXA1928_COMM_D2)	+= pxa1928_comm_d2.o
 
 obj-$(CONFIG_POWER) += power_core.o
 obj-$(CONFIG_DIALOG_POWER) += power_dialog.o
