Add PXA1928 Ara AP module platform
Signed-off-by: Rob Herring <robh@kernel.org>

--- a/arch/arm/Kconfig
+++ b/arch/arm/Kconfig
@@ -201,6 +201,9 @@ config ORION5X
 config TARGET_PXA1928DKB
 	bool "Marvell PXA1928DKB"
 
+config TARGET_PXA1928ARA
+	bool "Marvell PXA1928 Ara AP"
+
 config TARGET_DKB
 	bool "Support dkb"
 
@@ -573,6 +576,7 @@ source "board/Marvell/aspenite/Kconfig"
 source "board/Marvell/dkb/Kconfig"
 source "board/Marvell/gplugd/Kconfig"
 source "board/Marvell/pxa1928_concord/Kconfig"
+source "board/Marvell/pxa1928_ara/Kconfig"
 source "board/afeb9260/Kconfig"
 source "board/altera/socfpga/Kconfig"
 source "board/armadeus/apf27/Kconfig"
